# siem

./: .gitignore  Dockerfile  docker-compose.yml  go.mod  siem.md
nginx/: Dockerfile  default.conf  nginx.conf
siem/: .dockerignore  .env  .gitignore  CMakeLists.txt  Dockerfile  README.md  go.mod  main.cpp
siem/collection/: collection.cpp  collection.h
siem/containers/: hash_map.cpp  hash_map.h  queue.cpp  queue.h  unordered_set.cpp  unordered_set.h  vector.cpp  vector.h
siem/database/: database.cpp  database.h
siem/network/: client.cpp  server.cpp
siem/schema/: schema.cpp  schema.h  schema.json
siem/siem_agent/: agent.conf
siem/siem_agent/src/: buffer.cpp  buffer.h  config.cpp  config.h  log_collector.cpp  log_collector.h  main.cpp  sender.cpp  sender.h  utils.cpp  utils.h
siem/siemcore/: Dockerfile  gen_events  go.mod  run.sh
siem/siemcore/cert/: cert.pem  key.pem
siem/siemcore/cmd/gen_events/: Dockerfile  main.go
siem/siemcore/cmd/siemcore/: main.go
siem/siemcore/internal/app/: api_events.go  app.go  auth.go  dashboard.go  pages.go
siem/siemcore/internal/cppdb/: client.go
siem/siemcore/web/static/: app.css  app.js  login.js
siem/siemcore/web/templates/: dashboard.html  events.html  login.html
